frontend/tests/cases/negative/kindMismatchInInstanceHeadDTApp.gr
data A a = A

data B b = B

interface Simple a where
  simple : a -> a

-- correct version would be (A (B b))
instance Simple (A B) where
  simple x = x
